# jageocoder

./: .gitignore  .readthedocs.yaml  Gemfile  LICENSE  Pipfile  README.md  README_ja.md  README_options_ja.md  SECURITY.md  _config.yml  about.md  address.py  create_database.py  db  english.md  index.markdown  itaiji.py  log  pyproject.toml  pytest.ini  requirements.txt  requrements.txt  search_database.py  server.md  setup.cfg  setup.py  strlib.py  test_rtree.py
_layouts/: page.html
_posts/: 2021-07-27-release_ver020.markdown  2021-08-06-release_ver021.markdown  2021-10-05-release_ver022.markdown  2021-12-29-release_ver110.markdown  2022-03-21-release_ver113.markdown  2022-05-05-release_ver120.markdown  2022-05-23-release_ver130.markdown  2022-06-19-release_ver131.markdown  2022-12-31-update.markdown  2023-04-14-release_ver20.markdown  2023-04-14-release_ver200.markdown  2023-04-14-update.markdown  2023-04-14-welcome-to-jekyll.markdown  2023-04-29-release_ver201.markdown  2023-08-06-update.markdown  2024-04-14-update.markdown  2024-05-01-update.markdown  2024-06-06-release_v217.markdown  2025-04-23-update.markdown  2025-05-27-release_v219.markdown
_posts_trash/: 2021-03-11-release_ver019.markdown  2021-11-19-release_ver030.markdown  2021-12-09-release_ver100.markdown  2021-12-15-release_ver101.markdown  2022-05-05-release_ver120.markdown  2022-12-31-update.markdown  2023-04-14-release_ver200.markdown  2023-04-14-update.markdown  2023-07-06-server-release_ver100.markdown.markdown  2023-09-29-release_v210.markdown  2024-01-07-update.markdown  2024-05-08-release_v216.markdown
converter/: convert.py  convert_v2.py  download_isj.py  download_jusho.sh  jiscode.json
converter/mlit-isj/: convert.py
data/: offices.txt  test.txt
docs/source/: api.rst  api_level.rst  api_module.rst  api_node.rst  api_result.rst  api_tree.rst  code_samples.rst  command_line.rst  conf.py  index.rst  install.rst  quick_start.rst
flask-demo/: app.py  requirements.txt  run.bat  run.sh  waitress.bat
flask-demo/static/styles/: gsi_optimal_std.json  gsi_vector_std.json
flask-demo/templates/: addressform.html  aza.html  base.html  index.html  license.html  node.html  node_list.html  webapi.html
itaiji_dic/: README.md  check_compatibility.py  convert.py  itaiji_src.json
jageocoder/: __init__.py  __main__.py  address.py  aliases.json  aza_master.py  base.py  create_database.py  dataset.py  exceptions.py  itaiji.py  itaiji_dic.json  ja_rtree.py  jageocoder_rtree.py  local.py  local_tree.py  module.py  node.py  note.py  remote.py  result.py  rev.py  rtree.py  search_database.py  strlib.py  tree.py  trie.py  version.py
jageocoder/dbm/: __init__.py  abstract_table.py  base_index.py  base_table.py  exceptions.py  types.py
tests/: inactive_test_createdb.py  test_code.py  test_createdb.py  test_document_samples.py  test_itaiji.py  test_remote.py  test_reverse.py  test_search.py  test_strlib.py  test_trees.py
util/: add_office_locations.py  create_database.py  create_database_full.py  create_database_jukyohyouji.py  search_database.py
