[tool.poetry]
name = "jageocoder"
version = "2.1.7.post1"
description = "A Japanese-address geocoder for Python."
authors = ["Takeshi Sagara <sagara@info-proto.com>"]
repository = "https://github.com/t-sagara/jageocoder/"
license = "The MIT License"
readme = "README.md"
documentation = "https://jageocoder.readthedocs.io/"
packages = [
    {include = "jageocoder"},
]
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
include = ["itaiji_dic.json", "islands.json"]

[tool.poetry.dependencies]
python = "^3.7"
certifi = ">=2023.7.22"
cryptography = ">=42.0.4"
deprecated = "^1.2.13"
docopt = "^0.6.2"
geographiclib = "^2.0"
idna = ">=3.7"
jaconv = "^0.3.4"
marisa-trie = ">=0.7.8"
pycapnp = "*"
portabletab = ">=0.3.3"
requests = "*"
rtree = "^1.0.0"
tqdm = "^4.00.0"
urllib3 = ">=2.0.6"

[tool.poetry.group.dev.dependencies]
twine = "^4.0.2"


[tool.poetry.group.doc.dependencies]
sphinx-rtd-theme = "^1.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jageocoder = "jageocoder.__main__:main"
