[tool.poetry]
name = "jageocoder"
version = "2.1.10rc4"
description = "A Japanese-address geocoder for Python."
authors = ["Takeshi Sagara <sagara@info-proto.com>"]
repository = "https://github.com/t-sagara/jageocoder/"
license = "The MIT License"
readme = "README.md"
documentation = "https://jageocoder.readthedocs.io/"
packages = [
    {include = "jageocoder"},
]
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
include = ["itaiji_dic.json", "islands.json"]

[tool.poetry.dependencies]
python = ">3.9.1,<3.13"
certifi = ">=2024.07.04"
cryptography = ">=44.0.1"
deprecated = "^1.2.13"
docopt-ng = "*"
geographiclib = "^2.0"
idna = ">=3.7"
jaconv = "^0.3.4"
jinja2 = ">=3.1.6"
pycapnp = "*"
portabletab = ">=0.3.7.post1"
requests = "*"
rtree = "^1.0.0"
tqdm = "^4.00.0"


[tool.poetry.group.dev.dependencies]
twine = "^5.1.1"


[tool.poetry.group.doc.dependencies]
sphinx-rtd-theme = "^1.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.scripts]
jageocoder = "jageocoder.__main__:main"
