[project]
name = "jageocoder"
version = "2.2.0"
description = "A Japanese-address geocoder for Python."
authors = [{name = "Takeshi Sagara", email = "sagara@info-proto.com"}]
readme = "README.md"
license = { text = "MIT" }
license-file = "LICENSE"
requires-python = ">3.9.1"
keywords = ["geocoder", "Japanese address"]
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "deprecated >=1.2.13",
    "docopt-ng",
    "geographiclib >=2.0",
    "jaconv >=0.3.9",
    "requests",
    "rtree >=1.0.0",
    "tqdm >=4.0.0",
    "marisa-trie >=1.3.1",
]

[project.optional-dependencies]
dev = [
    "twine >=5.1.1"
]
doc = [
    "sphinx-rtd-theme >=1.2.0"
]
test = [
    "pytest >=8.4.1"
]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
jageocoder = "jageocoder.__main__:main"

[project.urls]
homepage = "https://t-sagara.github.io/jageocoder/"
repository = "https://github.com/t-sagara/jageocoder"
documentation = "https://jageocoder.readthedocs.io/ja/latest/"

[tool.poetry]
package-mode = true

packages = [
    {include = "jageocoder"},
]
include = ["itaiji_dic.json"]
