[metadata]
name = jageocoder
version = attr: jageocoder.__version__
url = https://github.com/t-sagara/jageocoder
download_url = https://github.com/t-sagara/jageocoder
author = Takeshi Sagara
author_email = sagara@info-proto.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = MIT
license_file = LICENSE
description = A Python implementation of Japanese-address geocoder.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    geocoder
    Japanese
    address

[options]
packages =
    jageocoder
install_requires =
    marisa-trie
    SQLAlchemy
    jaconv
    deprecated
    docopt
    geographiclib

[options.entry_points]
console_scripts =
    jageocoder = jageocoder.__main__:main

[options.package_data]
* = *.py, itaiji_dic.json
